# duckling

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
design/: duckling-design.md  v2.md  v3.md  v4.md  v5.md
duckling-exporter/: exporter.py  pyproject.toml  schema_sync.py
duckling-landing/: Dockerfile  build.gradle.kts
duckling-landing/src/main/kotlin/io/company/duckling/: AdaptiveController.kt  ExtensionInstaller.kt  Main.kt  Pipeline.kt
duckling-landing/src/main/kotlin/io/company/duckling/config/: Config.kt  ConfigLoader.kt
duckling-landing/src/main/kotlin/io/company/duckling/sink/: DuckLakeWriter.kt  SchemaEvolution.kt
duckling-landing/src/main/kotlin/io/company/duckling/source/: KafkaSource.kt  SchemaValidator.kt
integration_test/: pyproject.toml  test_landing_to_iceberg.py
local/: duckling.yaml  garage.toml
