[project]
name = "duckling-integration-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka==2.3.0",
    "duckdb>=1.5.1",
    "fastavro==1.9.4",
    "psycopg2-binary==2.9.9",
    "pyiceberg[s3fs]>=0.9.0",
    "requests==2.31.0",
    "pytest==8.2.0",
    "pyarrow>=23.0.1",
    "numpy>=2.4.4",
]

[tool.pytest.ini_options]
addopts = "-v -s"
